# stack

./: .gitattributes  LICENSE.md  README.md
api/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.local  supervisord.conf
api/.cargo/: config.toml
api/docker/: supervisord.conf
api/entity/: Cargo.toml  profile.rs
api/migration/: Cargo.toml
api/migration/src/: main.rs
api/prisma/: schema.prisma
api/src/: auth.rs  config.rs  db.rs  main.rs  prisma.rs
api/src/routes/: auth.rs  user.rs
api/supertokens/: .openapi-generator-ignore  Cargo.toml  generate.sh
api/supertokens/.openapi-generator/: FILES
api/supertokens/src/apis/: configuration.rs  core_api.rs  email_password_recipe_api.rs  email_verification_recipe_api.rs  jwt_recipe_api.rs  mod.rs  passwordless_recipe_api.rs  session_recipe_api.rs  third_party_recipe_api.rs  user_id_mapping_recipe_api.rs  user_metadata_recipe_api.rs  user_roles_recipe_api.rs
api/supertokens/src/models/: _recipe_jwt_jwks_get_200_response.rs  add_user_role_200_response.rs  add_user_role_200_response_one_of.rs  add_user_role_request.rs  cookie_info.rs  create_jwt_algorithm.rs  create_new_session_200_response.rs  create_new_session_request.rs  create_signed_jwt_200_response.rs  create_signed_jwt_200_response_one_of.rs  create_signed_jwt_200_response_one_of_1.rs  create_signed_jwt_request.rs  delete_session_200_response.rs  delete_session_request.rs  delete_session_request_one_of.rs  email_password_get_password_reset_200_response.rs  email_password_get_password_reset_200_response_one_of.rs  email_password_get_password_reset_200_response_one_of_1.rs  email_password_get_password_reset_request.rs  email_password_get_password_reset_token_200_response.rs  email_password_get_password_reset_token_200_response_one_of.rs  email_password_get_password_reset_token_request.rs  email_password_get_user_200_response.rs  email_password_get_user_200_response_one_of.rs  email_password_get_user_count_200_response.rs  email_password_get_users_200_response.rs  email_password_put_user_200_response.rs  email_password_put_user_request.rs  email_password_signin_200_response.rs  email_password_signin_200_response_one_of.rs  email_password_signin_request.rs  email_password_signup_200_response.rs  email_password_signup_200_response_one_of.rs  email_verification_verify_200_response.rs  email_verification_verify_200_response_one_of.rs  email_verification_verify_200_response_one_of_1.rs  email_verification_verify_get_200_response.rs  email_verification_verify_request.rs  (+121 more)
web/: index.html
(+6 files in other folders)
