[package]
edition = "2021"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.0", features = ["full"]}

jsonwebtoken = {version = "8", default-features = false}
rocket = "0.5.0-rc.2"

prisma-client-rust = {git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.1"}
prisma-client-rust-cli = {git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.1"}
