[package]
edition = "2021"
name = "api"
publish = false
version = "0.1.0"

[workspace]
members = [".", "entity", "migration", "supertokens"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}

rocket = "0.5.0-rc.2"
rocket_okapi = {version = "0.8.0-rc.2", features = ["swagger"]}

okapi = {version = "0.7.0-rc.1"}
schemars = "0.8.10"

anyhow = "1"
async-trait = "0.1"
lazy_static = "1"
thiserror = "1"

sea-orm = {git = "https://github.com/SeaQL/sea-orm", branch = "0.9.x", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite"]}
sea-orm-rocket = {git = "https://github.com/SeaQL/sea-orm", branch = "0.9.x"}

entity = {path = "entity"}
migration = {path = "migration"}

supertokens = {path = "supertokens"}
